fixed styling bug re: z-index value in MealsBanner.scss for improved layering

--- a/client/src/components/MealsBanner/MealsBanner.scss
+++ b/client/src/components/MealsBanner/MealsBanner.scss
@@ -11,7 +11,7 @@
   font-weight: bold;
   color: black;
   position: relative;
-  z-index: -1;
+  z-index: -100;
   overflow: hidden;
 
   @include mobile {
